# py-dynamin

./: .gitignore  README.md  pyproject.toml  test.txt
analysis/: esl.py  macro.py  micro.py  stylised_facts.py  utils.py
analysis/empirical_data/: CE16OV.csv  GDPC1.csv  GPDIC1.csv  PCECC96.csv  TBSDODNS.csv  UNRATE.csv
examples/pg_scenarios/config/: database.yaml
examples/post_growth/: run.py
examples/post_growth/config/: database.yaml  parameters.yaml
examples/post_growth_scenarios/: pg_scenarios.py
examples/post_growth_scenarios/config/: database.yaml  parameters.yaml  pg_scenarios.yaml
src/dynamin/: balanced_growth.py  balanced_growth_model.py  baseline.py  bgp_model.py  data_collector.py  model.py  model_v2.py  run.py  run_scenarios.py  simulator.py  utils.py
src/dynamin/agents/: abstract_firm.py  bank.py  capital_firm.py  consumption_firm.py  household.py
src/dynamin/config/: database.yaml  parameters.yaml
